fix feature height on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2979,6 +2979,7 @@
 			background-color: #2e3450;
 			min-height: 400px;
 			max-height: 429.33px;
+
 			margin-bottom: 25px;
 		}
 
@@ -2997,6 +2998,7 @@
 
 				.spotlights > section > .image img {
 					border-radius: 0;
+					display: block;
 					width: 100%;
 					height: 100%;
 				}
@@ -3097,6 +3099,9 @@
 		}
 
 		@media screen and (max-width: 736px) {
+			.spotlights section {
+				max-height: none;
+			}
 
 			.spotlights > section > .content {
 				padding: 3em 1.5em 1em 1.5em ;
